0.7:

- Added preInitParticles, which is called only once per burst and can be used to avoid re-computation.
- Removed multiple extraneous getLocation calls when adding particle data to a float buffer

0.62:

- Fixed an issue where dynamically tracked particles could be jittery on their first frame.
- Fixed a bug where the wrong emitters were being evicted when the tracked emitter buffer was full.
- Greatly optimized the tracked emitter buffer handler. It now no longer holds on to stale emitters longer than necessary
  and only binds the UBO data each frame up to its maximum used index.

0.61:

- Hotfix a crash when doWhenFinished is null
- Fixed an issue where streams were finishing when they weren't supposed to
- Fixed an issue where streams would no longer generate more than 1 burst per frame
- Changed maxDuration in Particles.stream back to float from Float, set to negative value to never expire

0.6:

- Added anchorEmitter to Particles, which automates the task of setting the emitter's location to a combat entity's location
  each frame as well as destroying streams when the anchored-to combat entity leaves play.
- Added the ability to dynamically anchor particles to their emitters, allowing them to track and follow changes
  in their emitters' locations. Applied on a per-emitter basis, using enableDynamicAnchoring.
  Useful for particles that are meant to follow a combat entity.
  - Note: emitter locations are stored in a UBO. Due to buffer size limitations, a maximum of 2048 emitters' locations
    can be tracked at a time. If more than 2048 emitters are being tracked, stale ones will start to be deleted. Use
    disableDynamicAnchoring to free an emitter's slot in the buffer.
- Added an optional doWhenFinished parameter when creating particle streams.
- Particles.stream now takes a Float for maxDuration rather than a float -- set it to null to make a stream never expire
  naturally.