@@ -288,10 +288,9 @@ public class ParticleData {
 
     final void addToFloatBuffer(IEmitter emitter, float startTime, FloatBuffer buffer) {
         Vector2f emitterLocation = emitter.getLocation();
-        Vector2f absolutePosition = new Vector2f(emitterLocation.x + offset.x, emitterLocation.y + offset.y);
         buffer.put(emitter.getIndexInTracker() + 0.5f)
-            .put(absolutePosition.x)
-            .put(absolutePosition.y)
+            .put(offset.x)
+            .put(offset.y)
             .put(emitterLocation.x)
             .put(emitterLocation.y)
             .put(emitter.getXDir() * Misc.RAD_PER_DEG)
