@@ -2,6 +2,8 @@
 
 - Added preInitParticles, which is called only once per burst and can be used to avoid re-computation.
 - Removed multiple extraneous getLocation calls when adding particle data to a float buffer
+- Updated dynamic anchoring to also dynamically update the emitter's axis.
+- Halved maximum simultaneous active dynamic emitters, down to 1024 from 2048
 
 0.62:
 
